# Nubilus

./: .env.example  LICENSE  README.md  backend.Dockerfile  docker-compose.yml  frontend.Dockerfile
.bruno/: bruno.json  ss.bru
.bruno/Alert/: List Alerts.bru  acknowledge alerts.bru  folder.bru  resolve alert.bru
.bruno/Api Keys/: List api keys.bru  create api keys.bru  delete api key.bru  folder.bru
.bruno/Auth/: Logout.bru  get User.bru  login.bru
.bruno/Database/: create database.bru  database target.bru  db metrics.bru  delete db target.bru  folder.bru  list database.bru  update db target.bru
.bruno/Endpoints/: check endpoints.bru  create Endpoints.bru  delete endpoint.bru  folder.bru  get endpoint.bru  list endpoints.bru
.bruno/Organization/: Create Organization.bru  List My Organizations.bru  getOrganization by Id.bru  update org.bru
.bruno/Server/: folder.bru  get server.bru  list servers.bru  server metrics.bru
.bruno/environments/: nubilus.bru
.github/workflows/: release.yml
agent/: .gitignore  AGENT_SPEC.md  Cargo.toml  README.md  agent.example.toml  install.sh  uninstall.sh
agent/.github/workflows/: release.yml
agent/src/: api.rs  config.rs  main.rs  models.rs
agent/src/collectors/: cpu.rs  disk.rs  memory.rs  mod.rs  network.rs
backend/: API.md  package-lock.json  package.json  tsconfig.json
backend/src/: index.ts
frontend/: .cta.json  README.md  index.html  nginx.conf  package-lock.json  package.json
frontend/public/: manifest.json  sw.js
frontend/src/: App.tsx  index.css  main.tsx  routeTree.gen.ts  styles.css
(+151 files in other folders)
