[package]
name = "nubilus-agent"
version = "0.1.4"
edition = "2021"
description = "Lightweight monitoring agent for Nubilus platform"
authors = ["Sky"]
license = "MIT"

[[bin]]
name = "nubilus-agent"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# System info collection
sysinfo = "0.30"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Config file parsing
toml = "0.8"

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Hostname detection
hostname = "0.3"

# OS information
os_info = "3.7"

# Unix syscalls (for root check)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
